--- a/index.html
+++ b/index.html
@@ -396,13 +396,12 @@
                 <use href="./images/symbol-defs.svg#icon-close-black"></use>
             </svg>
             </button>
-        </button>
         <form class="modal-form">
             <p>Залиште свої дані, ми вам передзвонимо</p>
             <div class="form-box">
                 <label class="modal-label" for="name-users">Ім'я</label>
                 <div class="box-icon-name">
-                <input class="modal-input" name="name-users" type="name" id="name-users"> 
+                <input class="modal-input" name="name-users" type="text" id="name-users"> 
                 <svg class="icon-user-name" width="18" height="18">
                     <use href="./images/symbol-defs.svg#icon-person-black"></use>
                 </svg>
@@ -447,7 +446,7 @@
 </div>
 
 
-    <script src="./modal.js"></script>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
